<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Activities</string>
    <string name="activity1_title">Activity 1</string>
    <string name="activity2_title">Activity 2</string>
    <string name="activity3_title">Activity 3</string>
    <string name="Activity1"> Patrick </string>
    <string name="Activity2"> Julian </string>
    <string name="Switch1">GOTO 1</string>
    <string name="Switch2">GOTO 2</string>
    <string name="Switch3">GOTO 3</string>

</resources>
