<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >
     <TextView
		android:text="@string/activity3_title"
		android:textSize="12pt"
		android:textColor="#000000"
        android:layout_width="match_parent"
		android:layout_height="60dp"
		android:gravity="center_horizontal|center_vertical"
	 />
	<TextView
		android:text="@string/Activity1"
		android:textSize="11pt"
		android:textColor="#000000"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:gravity="center_horizontal|center_vertical"
		/>
	<TextView
		android:text="@string/Activity2"
		android:textSize="11pt"
		android:textColor="#000000"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:gravity="center_horizontal|center_vertical"
		/>
     <Button
        android:id="@+id/switchActivity"
        android:text="@string/Switch1"
		android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:gravity="center_horizontal|bottom"
        />
	<Button
		android:id="@+id/switchActivity2"
		android:text="@string/Switch2"
		android:textSize="12pt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:gravity="center_horizontal|bottom"
		/>
	<Button
		android:id="@+id/switchActivity3"
		android:text="@string/Switch3"
		android:textSize="12pt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:gravity="center_horizontal|bottom"
		/>
</LinearLayout>
